--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@import "tailwindcss";
+
+// Dette
+@theme {
+  --color-mint-500: oklch(0.72 0.11 178);
+  --color-primary: oklch(0.58 0.0863 171.53);
+  --color-secondary: oklch(100% 0.1135 171.53)
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
