--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,17 @@
-@import "tailwindcss";
+/*@import "tailwindcss";*/
 
-// Dette
-@theme {
-  --color-mint-500: oklch(0.72 0.11 178);
-  --color-primary: oklch(0.58 0.0863 171.53);
-  --color-secondary: oklch(100% 0.1135 171.53)
-}
+/*@theme {*/
+/*  --color-mint-500: oklch(0.72 0.11 178);*/
+/*  --color-primary: oklch(0.58 0.0863 171.53); !*Oppgave 2*!*/
+/*  --color-secondary: oklch(100% 0.1135 171.53); !*Oppgave 2*!*/
+/*  --font-weight-extrabold: 1000; !* Oppgave 3*!*/
+/*}*/
+
+@import "./designsystem/theme.css"; /*Oppgave 5*/
 
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
