--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,10 @@
-/*@import "tailwindcss";*/
+@import "tailwindcss";
 
-/*@theme {*/
-/*  --color-mint-500: oklch(0.72 0.11 178);*/
-/*  --color-primary: oklch(0.58 0.0863 171.53); !*Oppgave 2*!*/
-/*  --color-secondary: oklch(100% 0.1135 171.53); !*Oppgave 2*!*/
-/*  --font-weight-extrabold: 1000; !* Oppgave 3*!*/
-/*}*/
-
-@import "./designsystem/theme.css"; /*Oppgave 5*/
+@theme {
+  --color-mint-500: oklch(0.72 0.11 178);
+  --color-primary: oklch(0.58 0.0863 171.53);
+  --color-secondary: oklch(100% 0.1135 171.53);
+}
 
 #root {
   max-width: 1280px;
