--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 
+/*Oppgave 3*/
 @theme {
   --color-mint-500: oklch(0.72 0.11 178);
   --color-primary: oklch(0.58 0.0863 171.53);
