Endrer litt styling

--- a/src/oppgaver/Oppgave7.css
+++ b/src/oppgaver/Oppgave7.css
@@ -1,5 +1,5 @@
 /*Styling for Oppgave 7 - her kan du gjerne endre!*/
 .infobox{
-    color: #646cff;
-    background: #213547;
+    color: #8F5587;
+    background: #dbffbf;
 }
